<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_no_data"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/urbanistblack"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/no_data"
            android:textColor="@color/title"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvStateMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/urbanistbold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="8sp"
            android:text="@string/no_data_msg"
            android:textColor="@color/subTitle_80"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRefreshNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/urbanistbold"
            android:includeFontPadding="false"
            android:paddingStart="70dp"
            android:paddingTop="12dp"
            android:paddingEnd="70dp"
            android:paddingBottom="12dp"
            android:text="@string/refresh_now"
            android:textAllCaps="false"
            android:textColor="@color/btn_text"
            android:textSize="18sp"
            app:backgroundTint="@color/btn_bg"
            app:cornerRadius="50dp" />

    </LinearLayout>

</RelativeLayout>