<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include layout="@layout/layout_top_pattern" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSkip"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/urbanistbold"
                android:includeFontPadding="false"
                android:minWidth="0dp"
                android:text="@string/lbl_skip"
                android:textAllCaps="false"
                android:textColor="@color/btn_text"
                android:textSize="16sp"
                app:backgroundTint="@color/btn_bg"
                app:cornerRadius="15dp"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:id="@+id/llWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSkip"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanistblack"
                    android:text="@string/lbl_welcome_back"
                    android:textColor="@color/title"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/urbanistbold"
                    android:text="@string/msg_let_s_log_in_a"
                    android:textColor="@color/subTitle_80"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llWelcome"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="@color/login_edt_text_bg"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/urbanistextrabold"
                        android:hint="@string/lbl_email"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:padding="18dp"
                        android:textColor="@color/login_edt_text"
                        android:textColorHint="@color/login_edt_hint_text"
                        android:textCursorDrawable="@drawable/cursor_gray"
                        android:textSize="18sp"
                        tools:ignore="Autofill" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="@color/login_edt_text_bg"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:endIconTint="@color/login_pass_icon"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/urbanistextrabold"
                            android:hint="@string/lbl_password"
                            android:includeFontPadding="false"
                            android:inputType="textPassword"
                            android:padding="18dp"
                            android:textColor="@color/login_edt_text"
                            android:textColorHint="@color/login_edt_hint_text"
                            android:textCursorDrawable="@drawable/cursor_gray"
                            android:textSize="18sp"
                            tools:ignore="Autofill" />

                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbRememberMe"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:buttonTint="@color/login_check_box_bg" />
                    <TextView
                        android:id="@+id/tvRememberMe"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/urbanistbold"
                        android:text="@string/lbl_remember_me"
                        android:textColor="@color/login_other_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/urbanistbold"
                        android:gravity="end"
                        android:text="@string/lbl_forgot_password"
                        android:textColor="@color/login_other_text"
                        android:textSize="15sp" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/urbanistbold"
                    android:includeFontPadding="false"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/lbl_log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp"
                    app:backgroundTint="@color/btn_bg"
                    app:cornerRadius="12dp" />




                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/urbanistbold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/msg_don_t_have_an_account"
                        android:textColor="@color/login_other_text"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanistbold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/lbl_sign_up"
                        android:textColor="@color/login_purple_text"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>