<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameMoreOption"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/img_sort_by_drop" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="10dp"
            android:background="@drawable/sory_by_drop_menu"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDaiLatest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/urbanistbold"
                android:singleLine="true"
                android:text="@string/sort_by_latest"
                android:textColor="@color/sort_by_dialog_text"
                android:textSize="14sp" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="1dp"
                android:background="@color/sort_by_dialog_line" />

            <TextView
                android:id="@+id/tvDiaPriceHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/urbanistbold"
                android:singleLine="true"
                android:text="@string/sort_by_high_price"
                android:textColor="@color/sort_by_dialog_text"
                android:textSize="14sp" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="1dp"
                android:background="@color/sort_by_dialog_line" />

            <TextView
                android:id="@+id/tvDiaPriceLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/urbanistbold"
                android:singleLine="true"
                android:text="@string/sort_by_low_price"
                android:textColor="@color/sort_by_dialog_text"
                android:textSize="14sp" />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="1dp"
                android:background="@color/sort_by_dialog_line" />

            <TextView
                android:id="@+id/tvDiaDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/urbanistbold"
                android:singleLine="true"
                android:text="@string/sort_by_distance"
                android:textColor="@color/sort_by_dialog_text"
                android:textSize="14sp" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>